apps/gethomepage/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: homepage
    labels:
        app.kubernetes.io/name: homepage
    annotations:
        # HTTPS entrypoint enabled
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        # TLS enabled
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd, authelia-forwardauth-authelia@kubernetescrd
        #gethomepage.dev/description: Dynamically Detected Homepage
        #gethomepage.dev/enabled: "true"
        #gethomepage.dev/group: Cluster Management
        #gethomepage.dev/icon: homepage.png
        #gethomepage.dev/name: Homepage
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:DIpdjYWBrVj4P6H5nl9SMIDbIgcM,iv:jJpfcxgUi4vEZB1NU/P+V5H/Q3KtQm1wjWZdUKah5fQ=,tag:bvAjCMII2oWO4kBeT7AoLQ==,type:str]
          secretName: wildcard-cloudflare-production-01
    rules:
        - host: ENC[AES256_GCM,data:5BW4RPHnYDOsIw9gc0UHdI0vUcNL,iv:Supdx7WANoxwEhHVRkUZZ3f4gTxpgA9mlhU/DeMAL+E=,tag:4V745jDfPbsVnACDDwPrPQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: homepage
                        port:
                            number: 3000
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2TWJXWXAvWXF0akNkY3RZ
[...]
            CI9tJzJCULP5tGaGJsRRkXszFxoSOKND42fAzznk8i7oKgMBVbC+nA==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0RTkrVWx2ZHlpRXpGSUM4
[...]
            uUgwoDCE4EIldRPpiIvCtBQkjNQTmXPGWvzn+VtnaI80hQS0jk/iCA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-04-08T14:04:39Z"
    mac: ENC[AES256_GCM,data:Eog/ZlmX447Goj2PntcqPse538IcuhoVaSNIvvo9pcixoZ/FtIOA7BzWXDxYoV86qDTvCKQ7+8I97QCEV47AVC4j1tDHpMDB21MuaQStcFEGK9EQUsLDtky5NFmnaVOfG1SxVqb6c5JXIZNfnmW1jZ5Y0/4RVTJqvlhC4ONu5yA=,iv:3VSHQl2x3g/+3SeVzD5KiyWXpxGpwwFDvE8WlCPQRA0=,tag:tHHxGGZ3+K2nubbAfJBQBg==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients)$
    version: 3.10.1
